# legacy-integration-wot

./: .gitignore  README.md
evaluation/: README.md
evaluation/effectiveness-evaluation/bluetooth-scraper/bluetooth-scrapper/: README.md  analysis.py  pyproject.toml  test.py
evaluation/zigbee-scraper/zigbee-scrapper/: pyproject.toml  zigbee-herdsman-converter-analysis.ipynb
evaluation/zigbee-scraper/zigbee-scrapper/zigbee_scrapper/: analysis.ipynb  analysis.py  download_files.py  frequency.csv
implementation/retrowot/: .env  .gitignore  README.md  dockerfile  linkings.ttl  main.py  my_graph.ttl  pyproject.toml  pytest.ini
implementation/retrowot-frontend/: .env  app.py  configs.py  dockerfile  pyproject.toml
implementation/retrowot/alignments/: bluetooth_gatt_alignments.ttl  zigbee_alignments.ttl
implementation/retrowot/retrowot/: base_models.py  configs.py  enriched_test.ttl  logging.conf  my_graph.ttl  performance-study-retrowot.py  protocol_linkings.ttl  service_discovery.py  servicecapability.ttl  servicetranslation.ttl  thing_description_translation.py  utils.py
implementation/retrowot/retrowot/bluetooth/: client.py  connection.py  datamodel.py  devices.py  discovery.py  service_discovery_enrichment.py  test.py  test.ttl
implementation/retrowot/retrowot/coap/: affordance.py  discovery_affordance.py  main.py
implementation/retrowot/retrowot/data/: DataPoint.py
implementation/retrowot/retrowot/http_server/: affordance.py  discovery.py  main.py
implementation/retrowot/retrowot/thing_description/: device.ttl  device_small.ttl  enriched_test.ttl  form.py  interaction_affordance.py  models.py  ontology_alignment.py  publish.py  queries.py  thing_description.py  thing_description_factory.py  utils.py  zigbee_small.ttl
implementation/retrowot/retrowot/zigbee/: client.py  datamodel.py  device.py  interaction_capabilities.py
implementation/retrowot/tests/: test_models.py
implementation/retrowot/tests/test_1/: input_bluetooth_device_raw.ttl  output_bluetooth_device_inference.ttl
implementation/retrowot/tests/test_10/: input_zigbee_device_raw.ttl  input_zigbee_thing_models.ttl  intermediary_output.ttl  output_thing_description.json
implementation/retrowot/tests/test_2/: input_bluetooth_device_data.ttl  output_bluetooth_data_for_thing_model_creation.ttl  output_thing_description.json
implementation/retrowot/thing_models/: bluetooth_thing_models.ttl  zigbee_thing_models.ttl
(+80 files in other folders)
