[tool.poetry]
name = "retrowot"
version = "0.1.0"
description = ""
authors = ["ThinkPad Rene <rene.dorsch@iis.fraunhofer.de>"]
readme = "README.md"
packages = [{include = "retrowot"}]

[tool.poetry.dependencies]
python = "^3.10"
bumble = "^0.0.178"
rdflib = "^7.0.0"
zigpy = "0.56.4"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
aiocoap = "^0.4.7"
pyee = "^11.1.0"
pymongo = "^4.6.0"
pyshacl = "^0.25.0"
mypy = "^1.7.1"
aiohttp = "^3.9.1"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
bellows = "0.35.9"
timer = "^0.2.2"
codetiming = "^1.4.0"
schedule = "^1.2.1"
pyoxigraph = "^0.3.22"
oxrdflib = "^0.3.6"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
